--- a/main.css
+++ b/main.css
@@ -6,6 +6,11 @@
 
 html,body{
 	overflow-x: hidden;
+	/*background-image:url('images/bgImg.jpg');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100% 100%;
+	object-fit: fill;*/
 }
 
 nav{
@@ -114,7 +119,7 @@ nav{
 .container {
 	padding: 15px 10px;
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 	min-height: 7vh;
 	background-repeat: no-repeat;
@@ -125,6 +130,7 @@ nav{
 	font-family: 'Inconsolata', monospace;
 	position: static;
 	width: 100%;
+	box-shadow: 0px 5px 10px 2px rgba(0, 191, 255, 0.2) inset;
 }
 .container_img {
 	flex:0 0 50%;
@@ -139,6 +145,15 @@ nav{
 }
 .container_text {
 	font-size: 120%;
+	margin-left: 15px;
+}
+
+.chartBox {
+	width: 50%;
+	padding: 20px;
+	border-radius: 20px;
+	border: solid 3px rgba(54, 162, 235, 1);
+	background: white;
 }
 
 @media screen and (max-width: 1440px){
