--- a/site/main.css
+++ b/site/main.css
@@ -6,7 +6,6 @@
 
 html,body{
 	overflow-x: hidden;
-	background-image:url('images/bgImg.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 100% 100%;
@@ -154,7 +153,9 @@ nav{
 }
 
 .chartBox {
+	flex:0 0 30%;
 	width: 50%;
+	height: 40vh;
 	padding: 20px;
 	border-radius: 20px;
 	/*border: solid 3px rgba(54, 162, 235, 1);*/
