--- a/site/main.css
+++ b/site/main.css
@@ -10,7 +10,6 @@ html,body{
 	background-position: center;
 	background-size: 100% 100%;
 	object-fit: fill;
-	background-image: radial-gradient(deepskyblue, purple);
 }
 ::-webkit-scrollbar {
 
@@ -35,7 +34,6 @@ nav{
 	z-index: 50;
 	width: 100%;
 	top: 0px;
-	
 }
 .name {
 	display: none;
@@ -114,7 +112,19 @@ nav{
 	justify-content: space-between;
 	position: relative;
 	flex-direction: column;
-	margin: 10% 0% 10% 0%;
+	margin: 9% 0% 0% 0%;
+}
+.content:before {
+	content: ' ';
+  display: block;
+  position: absolute;
+  opacity: 0.6;
+  background-image: radial-gradient(deepskyblue, purple);
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+	width: 100%;
+	height: 100%;
 }
 .content p{
 	margin: 1%;
@@ -132,7 +142,7 @@ nav{
 	background-size: 100% auto;
 	object-fit: fill;
 	font-family: 'Inconsolata', monospace;
-	position: static;
+	position: relative;
 	width: 100%;
 	box-shadow: 0px 5px 10px 2px rgba(0, 191, 255, 0.2) inset;
 }
