--- a/site/main.css
+++ b/site/main.css
@@ -1,121 +1,118 @@
-*{
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-html,body{
-	overflow-x: hidden;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 100% 100%;
-	object-fit: fill;
+html,
+body {
+  overflow-x: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  object-fit: fill;
 }
 ::-webkit-scrollbar {
-
-width: 0px;
-
+  width: 0px;
 }
-nav{
-	padding: 15px 10px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	min-height: 7vh;
-	box-shadow: 0 0 10px #000;
-	background-image:url('images/6.jpg');
-	background-repeat: no-repeat;
-	background-position: center;
-	background-attachment: scroll;
-	background-size: 100% auto;
-	object-fit: fill;
-	font-family: 'Inconsolata', monospace;
-	position: fixed;
-	z-index: 50;
-	width: 100%;
-	top: 0px;
+nav {
+  padding: 15px 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 7vh;
+  box-shadow: 0 0 10px #000;
+  background-image: url("images/6.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: scroll;
+  background-size: 100% auto;
+  object-fit: fill;
+  font-family: "Inconsolata", monospace;
+  position: fixed;
+  z-index: 50;
+  width: 100%;
+  top: 0px;
 }
 .name {
-	display: none;
+  display: none;
 }
-.logo{
-	flex:0 0 8%;
-	border-radius: 50%;
-	overflow: hidden;
-	
-}
-
-.logo img{
-	object-fit: fill;
-	max-width: 100%;
-	display: block;
-}
-.nav-links{
-	display: flex;
-	justify-content: space-around;
-	width: 75%;
+.logo {
+  flex: 0 0 8%;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
-.nav-links li{
-	list-style: none;
-	border: 1px solid black;
-	border-radius:10px;
-	padding: 1% 6% 1% 6%;
-	top: 0;
-	box-shadow: 2px 4px 1px 4px black;
-	display: flex;
-	position: relative;
-	background-color: ghostwhite;
+.logo img {
+  object-fit: fill;
+  max-width: 100%;
+  display: block;
 }
-.nav-links li:hover{
-	list-style: none;
-	border: 1px solid black;
-	border-radius:10px;
-	padding: 1% 6% 1% 6%;
-	top: 2px;
-	box-shadow: 0.5px 4px 1px 2px black;
-	background-color: deepskyblue;
-	transition:all 0s 500ms;
-
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 75%;
 }
 
-.nav-links a{
-	text-decoration: none;
-	padding-bottom: 4px;
-	color: black;
-	font-size: 30px;
-	font-weight: 700;
-	transition: linear .3s;
+.nav-links li {
+  list-style: none;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 1% 6% 1% 6%;
+  top: 0;
+  box-shadow: 2px 4px 1px 4px black;
+  display: flex;
+  position: relative;
+  background-color: ghostwhite;
 }
-.nav-links a:hover{
-	color: black;
-	transition:all 0s 500ms;
+.nav-links li:hover {
+  list-style: none;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 1% 6% 1% 6%;
+  top: 2px;
+  box-shadow: 0.5px 4px 1px 2px black;
+  background-color: deepskyblue;
+  transition: all 0s 500ms;
 }
 
-.burger{
-	cursor: pointer;
-	display: none;
+.nav-links a {
+  text-decoration: none;
+  padding-bottom: 4px;
+  color: black;
+  font-size: 30px;
+  font-weight: 700;
+  transition: linear 0.3s;
+}
+.nav-links a:hover {
+  color: black;
+  transition: all 0s 500ms;
 }
 
-.line{
-	width: 25px;
-	height: 3px;
-	margin: 5px;
-	background-color: #fff;
-	transition: all .4s ease;
+.burger {
+  cursor: pointer;
+  display: none;
 }
-.nav-active{
-	transform: translateX(0%);
+
+.line {
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  background-color: #fff;
+  transition: all 0.4s ease;
 }
-.content{
-	display: flex;
-	justify-content: space-between;
-	position: relative;
-	flex-direction: column;
-	margin: 9% 0% 0% 0%;
+.nav-active {
+  transform: translateX(0%);
+}
+.content {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  flex-direction: column;
+  margin: 9% 0% 0% 0%;
 }
 .content:before {
-	content: ' ';
+  content: " ";
   display: block;
   position: absolute;
   opacity: 0.6;
@@ -123,223 +120,219 @@ nav{
   background-repeat: no-repeat;
   background-position: 50% 0;
   background-size: cover;
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
-.content p{
-	margin: 1%;
-	font-size: 155%;
+.content p {
+  margin: 1%;
+  font-size: 155%;
 }
 .container {
-	padding: 15px 10px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 7vh;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-attachment: scroll;
-	background-size: 100% auto;
-	object-fit: fill;
-	font-family: 'Inconsolata', monospace;
-	position: relative;
-	width: 100%;
-	box-shadow: 0px 5px 10px 2px rgba(0, 191, 255, 0.2) inset;
+  padding: 15px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 7vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: scroll;
+  background-size: 100% auto;
+  object-fit: fill;
+  font-family: "Inconsolata", monospace;
+  position: relative;
+  width: 100%;
+  box-shadow: 0px 5px 10px 2px rgba(0, 191, 255, 0.2) inset;
 }
 
 .container_img {
-	flex:0 0 50%;
-	border-radius: 5%;
-	overflow: hidden;
-	height: 40vh;
+  flex: 0 0 50%;
+  border-radius: 5%;
+  overflow: hidden;
+  height: 40vh;
 }
-.container_img img{
-	object-fit: fill;
-	max-width: 100%;
-	display: block;
+.container_img img {
+  object-fit: fill;
+  max-width: 100%;
+  display: block;
 }
 .container_text {
-	font-size: 120%;
-	margin-left: 15px;
+  font-size: 120%;
+  margin-left: 15px;
 }
 
 .chartBox {
-	flex:0 0 30%;
-	width: 50%;
-	height: 40vh;
-	padding: 20px;
-	border-radius: 20px;
-	/*border: solid 3px rgba(54, 162, 235, 1);*/
-	background: white;
+  flex: 0 0 30%;
+  width: 50%;
+  height: 40vh;
+  padding: 20px;
+  border-radius: 20px;
+  /*border: solid 3px rgba(54, 162, 235, 1);*/
+  background: white;
 }
 
-@media screen and (max-width: 1440px){
-	.nav-links{
-		width: 85%;
-		justify-content: space-between;
+@media screen and (max-width: 1440px) {
+  .nav-links {
+    width: 85%;
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .nav-links {
+    width: 70%;
+    justify-content: space-between;
+  }
+  .nav-links a {
+    font-size: 23px;
+  }
+  .nav-links li {
+    padding: 1% 3% 1% 3%;
+  }
+  .nav-links li:hover {
+    padding: 1% 3% 1% 3%;
+  }
+  .content {
+    margin: 12% 2% 11% 2%;
+  }
 }
 
+@media screen and (max-width: 768px) {
+  .name {
+    display: block;
+  }
+  .name p {
+    text-align: center;
+    text-decoration: none;
+    color: ghostwhite;
+    font-size: 250%;
+    text-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white,
+      0 0 20px deepskyblue, 0 0 35px deepskyblue, 0 0 40px deepskyblue,
+      0 0 50px deepskyblue, 0 0 75px deepskyblue;
+  }
+  .logo {
+    display: none;
+  }
+  .burger {
+    display: block;
+  }
+  ul.nav-links.nav-active {
+    background-image: url("images/6.jpg");
+    justify-content: space-around;
+    position: absolute;
+    right: 0;
+    height: 40vh;
+    top: 99%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+  }
+  .nav-links {
+    background-image: url("images/6.jpg");
+    position: absolute;
+    right: 0;
+    height: 40vh;
+    top: 99%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  .nav-links li {
+    list-style: none;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px 5px 5px 5px;
+    top: 0;
+    box-shadow: 2px 4px 1px 4px black;
+    display: flex;
+    position: relative;
+    opacity: 1;
+  }
+  .nav-links li:hover {
+    list-style: none;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px 5px 5px 5px;
+    top: 2px;
+    box-shadow: 0.5px 4px 1px 2px black;
+    background-color: deepskyblue;
+    transition: all 0s 500ms;
+  }
+
+  .nav-links a {
+    text-decoration: none;
+    padding-bottom: 4px;
+    color: black;
+    font-size: 26px;
+    font-weight: 700;
+    transition: linear 0.3s;
+  }
+  .nav-links a:hover {
+    color: white;
+    transition: all 0s 500ms;
+  }
+  .logo {
+    position: relative;
+    left: 0;
+    flex: 0 0 60px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .logo img {
+    position: relative;
+    justify-content: space-between;
+  }
+  .nav-active {
+    transform: translateX(0%);
+  }
 }
-@media screen and (max-width: 1024px){
-	.nav-links{
-			width: 70%;
-			justify-content: space-between;
-}
-	.nav-links a{
-		font-size: 23px;
-	}
-	.nav-links li{
-		padding: 1% 3% 1% 3%;
-	}
-	.nav-links li:hover{
-		padding: 1% 3% 1% 3%;
-	}
-	.content{
-		margin: 12% 2% 11% 2%;
-	}
-}
-
-@media screen and (max-width: 768px){
-	.name {
-		display: block;
-	}
-	.name p{
-		text-align: center;
-		text-decoration: none;
-		color: ghostwhite;
-		font-size: 250%;
-		text-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white, 0 0 20px deepskyblue, 0 0 35px deepskyblue, 0 0 40px deepskyblue, 0 0 50px deepskyblue, 0 0 75px deepskyblue;
-	}
-	.logo {
-		display:none;
-	}
-	.burger{
-			display: block;
-	}
-	ul.nav-links.nav-active{
-		background-image:url('images/6.jpg');
-		justify-content: space-around;
-		position: absolute;
-		right: 0;
-		height: 40vh;
-		top: 99%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		width: 40%;
-
-	}
-	.nav-links{
-			background-image:url('images/6.jpg');
-			position: absolute;
-			right: 0;
-			height: 40vh;
-			top: 99%;
-			display: flex;
-			justify-content: space-around;
-			flex-direction: column;
-			align-items: center;
-			width: 40%;
-			transform: translateX(100%);
-			transition: transform .5s ease-in;
-	}
-	.nav-links li{
-			list-style: none;
-			border: 1px solid black;
-			border-radius:10px;
-			padding: 5px 5px 5px 5px;
-			top: 0;
-			box-shadow: 2px 4px 1px 4px black;
-			display: flex;
-			position: relative;
-			opacity: 1;
-
-	}
-	.nav-links li:hover{
-			list-style: none;
-			border: 1px solid black;
-			border-radius:10px;
-			padding: 5px 5px 5px 5px;
-			top: 2px;
-			box-shadow: 0.5px 4px 1px 2px black;
-			background-color: deepskyblue;
-			transition:all 0s 500ms;
-
-	}
-
-	.nav-links a{
-			text-decoration: none;
-			padding-bottom: 4px;
-			color: black;
-			font-size: 26px;
-			font-weight: 700;
-			transition: linear .3s;
-	}
-	.nav-links a:hover{
-			color: white;
-			transition:all 0s 500ms;
-	}
-	.logo{
-			position:relative;
-			left: 0;
-			flex:0 0 60px;
-			border-radius: 50%;
-			overflow: hidden;
-	}
-
-	.logo img{
-			position: relative;
-			justify-content: space-between;
-	}
-	.nav-active{
-			transform: translateX(0%);
-	}
-}
-@media screen and (max-width: 425px){
-	.nav-active{
-			transform: translateX(0%);
-	}
-	.content{
-		margin: 20% 2% 11% 2%;
-	}
-	ul.nav-links.nav-active{
-		height: 30vh;
-		width: 50%;
-	}
-	.nav-links.nav-active a{
-		font-size: 24px;
-	}
-	ul.nav-links{
-		height: 30vh;
-		width: 50%;
-	}
-	.nav-links a{
-		font-size: 24px;
-	}
-	.name p{
-		font-size: 225%;
-	}
+@media screen and (max-width: 425px) {
+  .nav-active {
+    transform: translateX(0%);
+  }
+  .content {
+    margin: 20% 2% 11% 2%;
+  }
+  ul.nav-links.nav-active {
+    height: 30vh;
+    width: 50%;
+  }
+  .nav-links.nav-active a {
+    font-size: 24px;
+  }
+  ul.nav-links {
+    height: 30vh;
+    width: 50%;
+  }
+  .nav-links a {
+    font-size: 24px;
+  }
+  .name p {
+    font-size: 225%;
+  }
 }
 
 @keyframes navLinksFade {
-	from{
-			opacity: 0;
-			transform: translateX(50px);
-			}
-	to{
-			opacity: 1;
-			transform: translateX(0px);
-		}
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
 
-.toggle .line1{
-	transform: rotate(-45deg) translate(-5px,6px);
-
-	 }
-.toggle .line2{
-	opacity: 0;
-	}
-.toggle .line3{
-	transform: rotate(45deg) translate(-5px,-6px);
-	}
-	
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+  opacity: 0;
+}
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
