--- a/figma_1/css/style.css
+++ b/figma_1/css/style.css
@@ -55,17 +55,17 @@
 /*header styles start*/
 
 .header {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 .header_wrapper {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
   justify-content: space-between;
-	padding-top: 56px;
+  padding-top: 56px;
 }
 .header_list {
   display: flex;
@@ -81,21 +81,74 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-	color: white;
-	text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
-.header_link:hover, .header_link:focus,.header_link:active{
-	opacity: .75;
+.header_link:hover,
+.header_link:focus,
+.header_link:active {
+  opacity: 0.75;
 }
 
 /*header styles end*/
 
 /*intro styles start*/
 
-.intro{
-	height: 100vh;
-	background: url(../img/intro-bg.jpg) no-repeat center;
-	background-size: cover;
+.intro {
+  min-height: 100vh;
+  background: url(../img/intro-bg.jpg) no-repeat center;
+  background-size: cover;
+  padding-top: 263px;
 }
-
+.intro_title {
+  max-width: 619px;
+  font-weight: 500;
+  font-size: 50px;
+  line-height: 60px;
+  color: white;
+  margin-bottom: 22px;
+}
+.intro_subtitle {
+  color: white;
+  font-size: 16px;
+  line-height: 24px;
+  max-width: 546px;
+  margin-bottom: 59px;
+}
+.search-form_info {
+  display: flex;
+  flex-wrap: wrap;
+}
+.search-form_field {
+  width: 297px;
+  background: transparent url(../img/svg/circle-ico.svg) no-repeat left 6px;
+  background-size: 20px;
+  border: 0;
+  border-bottom: 2px solid #bfc0c5;
+  margin-right: 60px;
+  padding-left: 43px;
+  padding-bottom: 22px;
+  font-weight: 500;
+  font-size: 18px;
+  color: white;
+}
+.search-form_field::placeholder {
+  font-weight: 500;
+  font-size: 18px;
+  color: white;
+}
+.search-form_submit {
+  padding: 15px 39px;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 24px;
+  color: white;
+  background-color: #1b7dff;
+  border: 0;
+}
+.search-form_submit:hover,
+.search-form_submit:focus,
+.search-form_submit:active {
+  background-color: #0e66da;
+}
 /*intro styles end*/
