--- a/figma_1/css/style.css
+++ b/figma_1/css/style.css
@@ -55,12 +55,15 @@ img {
   max-width: 1060px;
   margin: 0 auto;
 }
-
 .wrapper-full {
   max-width: 1262px;
   margin: 0 auto;
 }
 
+.wrapper-full {
+  max-width: 1262px;
+  margin: 0 auto;
+}
 .section-title {
   font-weight: 500;
   font-size: 35px;
@@ -266,3 +269,88 @@ img {
 }
 
 /* Benefits styles end */
+
+/*  Places style start  */
+.places{
+	margin-bottom: 133px;
+}
+.places_caption {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 36px;
+}
+.places__title {
+  margin-right: 15px;
+}
+.places_view-all {
+  font-size: 16px;
+  color: #006dfe;
+  text-decoration: none;
+  background: url(../img/svg/arrow-right-ico.svg) no-repeat right center;
+  padding-right: 59px;
+}
+.places_view-all:hover,
+.places_view-all:focus {
+  opacity: 0.65;
+}
+.places_cards {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 10px;
+}
+.places_card {
+  position: relative;
+  overflow: hidden;
+}
+.places_card::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(21, 24, 36, 0.4);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+.places_card:hover .places_card-pic {
+  transform: scale(1.05);
+}
+.places_card-title {
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 60px;
+  color: white;
+  position: absolute;
+  bottom: 27px;
+  left: 29px;
+  z-index: 3;
+}
+.places_card_size_lg {
+  grid-column: span 3;
+}
+.places_card_size_sm{
+	grid-column: span 2;
+}
+.places_card-pic {
+  width: 100%;
+  object-fit: cover;
+  transition: 0.15s all;
+}
+.places_card-pic_size_lg{
+	max-height: 354px;
+}
+.places_card-pic_size_sm{
+	max-height: 283px;
+}
+.places_card-link{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 4;
+}
+/*  Places style end  */
