--- a/figma_1/css/style.css
+++ b/figma_1/css/style.css
@@ -54,16 +54,15 @@ img {
 .wrapper {
   max-width: 1060px;
   margin: 0 auto;
-}
-.wrapper-full {
-  max-width: 1262px;
-  margin: 0 auto;
+	padding: 15px;
 }
 
 .wrapper-full {
   max-width: 1262px;
   margin: 0 auto;
+	padding: 15px;
 }
+
 .section-title {
   font-weight: 500;
   font-size: 35px;
@@ -130,7 +129,30 @@ img {
 .header__link:active {
   opacity: 0.75;
 }
-
+.header_burger{
+	width: 40px;
+	height: 28px;
+	position: relative;
+	display: none;
+}
+.burger_line{
+	display: block;
+	width: 100%;
+	height: 2px;
+	background-color: #fff;
+	position: absolute;
+	left: 0;
+}
+.burger_line_first{
+	top: 0;
+}
+.burger_line_second{
+	top: 50%;
+	transform: translateY(-50%);
+}
+.burger_line_third{
+	bottom: 0;
+}
 /* Header styles end */
 
 /* Intro styles start */
@@ -553,3 +575,62 @@ img {
 	opacity: 0.72;
 }
 /* footer styles end */
+
+/*media start*/
+
+@media screen and (max-width:767px){
+	.header_burger{
+		display: block;
+	}
+	.header__nav{
+		width: 100%;
+		height: 100%;
+		position: fixed;
+		top: 0;
+		left: 0;
+		background-color: black;
+		z-index: 10;
+		padding: 75px;
+		transform: translateX(100%);
+		transition: all .2s linear;
+	}
+	.header__nav_active{
+		transform: translateX(0);
+	}
+	.header__item{
+		width: 100%;
+		margin-right: 0;
+		margin-bottom: 30px;
+	}
+	.header__item:last-child{
+		margin-bottom: 0;
+	}
+	.header__link{
+		font-size: 42px;
+		line-height: 48px;
+	}
+	.header__nav-close{
+		width: 40px;
+		height: 40px;
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		z-index: 11;
+	}
+	.header__nav-close-line{
+		display: block;
+		width: 100%;
+		height: 2px;
+		background-color: white;
+		position: absolute;
+		top: 50%;
+	}
+	.header__nav-close-line:first-child{
+		transform:translateY(-50%) rotate(45deg);
+	}
+	.header__nav-close-line:last-child{
+		transform:translateY(-50%) rotate(-45deg);
+	}
+}
+
+/*media end*/
