--- a/figma_1/css/style.css
+++ b/figma_1/css/style.css
@@ -331,7 +331,7 @@ img {
 .places_cards {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-gap: 10px;
+  grid-column-gap: 10px;
 }
 .places_card {
   position: relative;
@@ -442,12 +442,14 @@ img {
 }
 .top_cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 57px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-column-gap: 57px;
+	grid-row-gap: 57px;
 }
 .top_card {
   display: flex;
   flex-direction: column;
+	grid-column: span 2;
 }
 .top_card-pic {
   position: relative;
@@ -578,9 +580,71 @@ img {
 
 /*media start*/
 
+@media screen and (max-width:960px){
+	.benefits{
+		margin-bottom: 75px;
+	}
+	.search-form__field{
+		margin-bottom: 25px;
+	}
+	.benefits__cards{
+		padding: 0 15px;
+		grid-column-gap: 35px;
+	}
+	.benefits__card{
+		margin-bottom: 60px;
+	}
+	.benefits__title{
+		padding: 55px 15px;
+	}
+	.benefits__wrap{
+		box-shadow: none;
+	}
+	.places_card_size_lg{
+		grid-column: span 6;
+	}
+	.places_card_size_sm{
+		grid-column: span 6;
+	}
+	.tours_tour{
+		grid-column-gap: 35px;
+	}
+	.tour_info{
+		padding-left: 0;
+	}
+	.tour_title{
+		margin-bottom: 15px;
+	}
+	.tour_desc{
+		margin-bottom: 15px;
+	}
+	.top_cards{
+		grid-column-gap: 25px;
+		grid-row-gap: 55px;
+	}
+	.top_card{
+		grid-column: span 3;
+	}
+	.top_card-pic{
+		margin-bottom: 25px;
+	}
+	.footer{
+		padding: 60px 0;
+	}
+}
+
 @media screen and (max-width:767px){
+	.section-title{
+		margin-bottom: 25px;
+	}
+	.section-title::after {
+		width: 78px;
+	}
 	.header_burger{
 		display: block;
+	}
+	.header__wrapper{
+		padding-top: 28px;
 	}
 	.header__nav{
 		width: 100%;
@@ -630,6 +694,55 @@ img {
 	}
 	.header__nav-close-line:last-child{
 		transform:translateY(-50%) rotate(-45deg);
+	}
+	.intro{
+		padding-top: 100px;
+	}
+	.intro__title{
+		font-size: 32px;
+		line-height: 48px;
+	}
+	.intro__subtitle{
+		font-size: 14px;
+	}
+	.search-form__field{
+		width: 100%;
+		margin-right: 0;
+		padding-bottom: 12px;
+		background: transparent url(../img/svg/circle-ico.svg) no-repeat left 2px;
+	}
+	.search-form__field::placeholder{
+		font-size: 16px;
+	}
+	.search-form__submit{
+		width: 100%;
+	}
+	.benefits{
+		margin-bottom: 36px;
+	}
+	.benefits__card{
+		grid-column:span 3;
+		margin-bottom: 40px;
+	}
+	.benefits__card-pic{
+		margin-bottom: 20px;
+	}
+	.benefits__card-title{
+		margin-bottom: 12px;
+	}
+	.benefits__card-desc{
+		margin-bottom: 20px;
+	}
+	.places{
+		margin-bottom: 76px;
+	}
+	.places_card-pic_lg,.places_card-pic_sm{
+		height: 230px;
+	}
+}
+@media screen and (max-width:500px){
+	.header__nav{
+		padding: 75px 30px;
 	}
 }
 
