added resourse optimization and one script to burg

--- a/figma_1/css/style.css
+++ b/figma_1/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* lato-regular - latin */
 @font-face {
   font-family: "Lato";
@@ -29,12 +36,14 @@
       url("../fonts/lato-v15-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body {
@@ -94,6 +103,8 @@ img {
   top: 0;
   left: 0;
   width: 100%;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
   padding-bottom: 20px;
   z-index: 60;
@@ -102,15 +113,25 @@ img {
   background: rgba(21, 24, 36, 0.6);
 }
 .header__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-top: 56px;
 }
 .header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .header__item {
   margin-right: 82px;
@@ -148,7 +169,9 @@ img {
 }
 .burger_line_second{
 	top: 50%;
-	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	    -ms-transform: translateY(-50%);
+	        transform: translateY(-50%);
 }
 .burger_line_third{
 	bottom: 0;
@@ -159,7 +182,7 @@ img {
 
 .intro {
   min-height: 100vh;
-  background: url(../img/intro-bg.jpg) no-repeat center;
+  background: url(../img/intro-bg-min.jpg) no-repeat center;
   background-size: cover;
   padding-top: 263px;
   padding-bottom: 223px;
@@ -183,8 +206,11 @@ img {
 }
 
 .search-form__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .search-form__field {
@@ -196,6 +222,30 @@ img {
   margin-right: 60px;
   padding-left: 43px;
   padding-bottom: 22px;
+  font-weight: 500;
+  font-size: 18px;
+  color: #fff;
+}
+
+.search-form__field::-webkit-input-placeholder {
+  font-weight: 500;
+  font-size: 18px;
+  color: #fff;
+}
+
+.search-form__field::-moz-placeholder {
+  font-weight: 500;
+  font-size: 18px;
+  color: #fff;
+}
+
+.search-form__field:-ms-input-placeholder {
+  font-weight: 500;
+  font-size: 18px;
+  color: #fff;
+}
+
+.search-form__field::-ms-input-placeholder {
   font-weight: 500;
   font-size: 18px;
   color: #fff;
@@ -235,7 +285,8 @@ img {
   max-width: 1262px;
   background-color: #fff;
   margin: 0 auto;
-  box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
+  -webkit-box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
+          box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
   position: relative;
 }
 
@@ -248,18 +299,23 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
   background-color: #fff;
 }
 
 .benefits__cards {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 55px 1fr 55px 1fr;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 55px;
   padding: 0 100px;
 }
 
 .benefits__card {
+  -ms-grid-column-span: 1;
   grid-column: span 1;
   margin-bottom: 112px;
 }
@@ -293,6 +349,8 @@ img {
   color: #006dfe;
   text-decoration: none;
   background: url(../img/svg/arrow-right-ico.svg) no-repeat 95% center;
+  -webkit-transition: 0.2s all;
+  -o-transition: 0.2s all;
   transition: 0.2s all;
 }
 
@@ -308,10 +366,17 @@ img {
   margin-bottom: 133px;
 }
 .places_caption {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 36px;
 }
 .places__title {
@@ -329,9 +394,12 @@ img {
   opacity: 0.65;
 }
 .places_cards {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr;
   grid-template-columns: repeat(6, 1fr);
   grid-column-gap: 10px;
+	grid-row-gap: 10px;
 }
 .places_card {
   position: relative;
@@ -349,7 +417,9 @@ img {
   z-index: 2;
 }
 .places_card:hover .places_card-pic {
-  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+          transform: scale(1.05);
 }
 .places_card-title {
   font-weight: 700;
@@ -362,14 +432,19 @@ img {
   z-index: 3;
 }
 .places_card_size_lg {
+  -ms-grid-column-span: 3;
   grid-column: span 3;
 }
 .places_card_size_sm {
+  -ms-grid-column-span: 2;
   grid-column: span 2;
 }
 .places_card-pic {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: 0.15s all;
+  -o-transition: 0.15s all;
   transition: 0.15s all;
 }
 .places_card-pic_size_lg {
@@ -393,10 +468,14 @@ img {
   margin-bottom: 139px;
 }
 .tours_tour {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 108px 1fr;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 108px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 103px;
 }
 .tour_title {
@@ -441,14 +520,22 @@ img {
   margin-bottom: 54px;
 }
 .top_cards {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 57px 1fr 57px 1fr 57px 1fr 57px 1fr 57px 1fr;
   grid-template-columns: repeat(6, 1fr);
   grid-column-gap: 57px;
 	grid-row-gap: 57px;
 }
 .top_card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+	-ms-grid-column-span: 2;
 	grid-column: span 2;
 }
 .top_card-pic {
@@ -460,11 +547,18 @@ img {
   bottom: 0;
   left: 0;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 16px 25px;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   /* background: rgba(21, 24, 36, 0.6); */
 }
 .top_card-title {
@@ -548,17 +642,25 @@ img {
 	padding: 119px 0;
 }
 .footer_item{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 .footer_logo{
 	width: 50%;
 }
 .footer_nav{
 	width: 50%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 .footer_menu-title{
 	font-weight: 500;
@@ -598,12 +700,15 @@ img {
 		padding: 55px 15px;
 	}
 	.benefits__wrap{
-		box-shadow: none;
+		-webkit-box-shadow: none;
+		        box-shadow: none;
 	}
 	.places_card_size_lg{
+		-ms-grid-column-span: 6;
 		grid-column: span 6;
 	}
 	.places_card_size_sm{
+		-ms-grid-column-span: 6;
 		grid-column: span 6;
 	}
 	.tours_tour{
@@ -623,6 +728,7 @@ img {
 		grid-row-gap: 55px;
 	}
 	.top_card{
+		-ms-grid-column-span: 3;
 		grid-column: span 3;
 	}
 	.top_card-pic{
@@ -655,11 +761,17 @@ img {
 		background-color: black;
 		z-index: 10;
 		padding: 75px;
-		transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+		    -ms-transform: translateX(100%);
+		        transform: translateX(100%);
+		-webkit-transition: all .2s linear;
+		-o-transition: all .2s linear;
 		transition: all .2s linear;
 	}
 	.header__nav_active{
-		transform: translateX(0);
+		-webkit-transform: translateX(0);
+		    -ms-transform: translateX(0);
+		        transform: translateX(0);
 	}
 	.header__item{
 		width: 100%;
@@ -690,10 +802,14 @@ img {
 		top: 50%;
 	}
 	.header__nav-close-line:first-child{
-		transform:translateY(-50%) rotate(45deg);
+		-webkit-transform:translateY(-50%) rotate(45deg);
+		    -ms-transform:translateY(-50%) rotate(45deg);
+		        transform:translateY(-50%) rotate(45deg);
 	}
 	.header__nav-close-line:last-child{
-		transform:translateY(-50%) rotate(-45deg);
+		-webkit-transform:translateY(-50%) rotate(-45deg);
+		    -ms-transform:translateY(-50%) rotate(-45deg);
+		        transform:translateY(-50%) rotate(-45deg);
 	}
 	.intro{
 		padding-top: 100px;
@@ -711,6 +827,18 @@ img {
 		padding-bottom: 12px;
 		background: transparent url(../img/svg/circle-ico.svg) no-repeat left 2px;
 	}
+	.search-form__field::-webkit-input-placeholder{
+		font-size: 16px;
+	}
+	.search-form__field::-moz-placeholder{
+		font-size: 16px;
+	}
+	.search-form__field:-ms-input-placeholder{
+		font-size: 16px;
+	}
+	.search-form__field::-ms-input-placeholder{
+		font-size: 16px;
+	}
 	.search-form__field::placeholder{
 		font-size: 16px;
 	}
@@ -721,6 +849,7 @@ img {
 		margin-bottom: 36px;
 	}
 	.benefits__card{
+		-ms-grid-column-span:3;
 		grid-column:span 3;
 		margin-bottom: 40px;
 	}
@@ -746,13 +875,15 @@ img {
 		margin-bottom: 0;
 	}
 	.tour_pic,.tour_info{
+		-ms-grid-column-span: 2;
 		grid-column: span 2;
 	}
 	.tour_pic{
 		margin-bottom: 12px;
 	}
 	.tour_pic_mob-first{
-		grid-row-start: -1;
+		-ms-grid-row: -1;
+		    grid-row-start: -1;
 	}
 	.tours_tour{
 		margin-bottom: 50px;
@@ -761,6 +892,7 @@ img {
 		margin-bottom: 76px;
 	}
 	.top_card{
+		-ms-grid-column-span: 6;
 		grid-column: span 6;
 	}
 	.top_card_stats{
